Addition and removal of DNS servers with the usage of SharedPreferences

--- a/app/src/main/res/layout/activity_dns.xml
+++ b/app/src/main/res/layout/activity_dns.xml
@@ -26,34 +26,17 @@
         android:orientation="vertical">
 
         <Switch
-            android:id="@+id/dns_title_1"
+            android:id="@+id/tdns_title_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:text="@string/custom_1_ipv4_title" />
 
-        <LinearLayout
+        <EditText
+            android:id="@+id/dns_textbox_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/dns_textbox_1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:layout_gravity="bottom"
-                android:layout_weight="1" />
-
-            <ImageButton
-                android:id="@+id/dns_add_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/invisible_border"
-                android:padding="8dp"
-                app:srcCompat="@android:drawable/ic_menu_add" />
-
-        </LinearLayout>
+            android:layout_margin="8dp"/>
 
     </LinearLayout>
 
@@ -67,34 +50,17 @@
         android:orientation="vertical">
 
         <Switch
-            android:id="@+id/dns_title_2"
+            android:id="@+id/tdns_title_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:text="@string/custom_2_ipv4_title" />
 
-        <LinearLayout
+        <EditText
+            android:id="@+id/dns_textbox_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/dns_textbox_2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:layout_gravity="bottom"
-                android:layout_weight="1" />
-
-            <ImageButton
-                android:id="@+id/dns_add_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/invisible_border"
-                android:padding="8dp"
-                app:srcCompat="@android:drawable/ic_menu_add" />
-
-        </LinearLayout>
+            android:layout_margin="8dp"/>
 
     </LinearLayout>
 
@@ -108,75 +74,39 @@
         android:orientation="vertical">
 
         <Switch
-            android:id="@+id/dns_title_3"
+            android:id="@+id/tdns_title_3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:text="@string/custom_3_ipv6_title" />
 
-        <LinearLayout
+        <EditText
+            android:id="@+id/dns_textbox_3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/dns_textbox_3"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:layout_gravity="bottom"
-                android:layout_weight="1" />
-
-            <ImageButton
-                android:id="@+id/dns_add_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/invisible_border"
-                android:padding="8dp"
-                app:srcCompat="@android:drawable/ic_menu_add" />
-
-        </LinearLayout>
+            android:layout_margin="8dp"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_margin="8dp"
         android:background="@drawable/light_gray_border"
         android:orientation="vertical">
 
         <Switch
-            android:id="@+id/dns_title_4"
+            android:id="@+id/tdns_title_4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:text="@string/custom_4_ipv6_title" />
 
-        <LinearLayout
+        <EditText
+            android:id="@+id/dns_textbox_4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/dns_textbox_4"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:layout_gravity="bottom"
-                android:layout_weight="1" />
-
-            <ImageButton
-                android:id="@+id/dns_add_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/invisible_border"
-                android:padding="8dp"
-                app:srcCompat="@android:drawable/ic_menu_add" />
-
-        </LinearLayout>
+            android:layout_margin="8dp"/>
 
     </LinearLayout>
 
