--- a/app/src/main/res/layout/list_item_blank.xml
+++ b/app/src/main/res/layout/list_item_blank.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/whitelist_container"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/light_gray_border"
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/no_lists"
+        android:id="@+id/item_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:text="@string/no_data"
+        android:text=""
         android:layout_weight="1"
         android:layout_gravity="center_vertical"/>
+
+    <ImageButton
+        android:id="@+id/remove_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
 </LinearLayout>
