--- a/app/src/main/res/layout/activity_firewall.xml
+++ b/app/src/main/res/layout/activity_firewall.xml
@@ -6,9 +6,12 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/danger_zone_firewall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/red_border"
         android:orientation="vertical">
 
@@ -34,7 +37,6 @@
 
         </LinearLayout>
         <TextView
-            android:id="@+id/danger_zone_firewall"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
@@ -46,9 +48,7 @@
         android:id="@+id/application_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_margin="8dp"
         android:padding="8dp"
         android:background="@drawable/light_gray_border"/>
 
