--- a/app/src/main/res/layout/list_item_firewall_application.xml
+++ b/app/src/main/res/layout/list_item_firewall_application.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/light_gray_line_bottom">
 
     <ImageView
         android:id="@+id/application_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:padding="8dp"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <Switch
@@ -17,5 +19,5 @@
         android:padding="8dp"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:text="@string/application_name" />
+        android:text="@string/no_data" />
 </LinearLayout>
