--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="lightGray">#EEEEEE</color>
     <color name="notAsLightGray">#CCCCCC</color>
     <color name="white">#FFFFFF</color>
+    <color name="transparent">#50000000</color>
 </resources>
