Single application blocking, the crude approach

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="notAsLightGray">#CCCCCC</color>
     <color name="white">#FFFFFF</color>
     <color name="transparent">#50000000</color>
+    <color name="transparentGreen">#5045A00E</color>
+    <color name="transparentClear">#00000000</color>
 </resources>
