--- a/app/src/main/res/layout/activity_vpn.xml
+++ b/app/src/main/res/layout/activity_vpn.xml
@@ -58,8 +58,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="8dp"
-                        app:srcCompat="@android:drawable/ic_menu_add"
-                        android:background="@drawable/invisible_border"/>
+                        app:srcCompat="@android:drawable/ic_menu_add" />
 
                 </LinearLayout>
 
@@ -93,8 +92,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="8dp"
-                        app:srcCompat="@android:drawable/ic_menu_add"
-                        android:background="@drawable/invisible_border"/>
+                        app:srcCompat="@android:drawable/ic_menu_add"/>
 
                 </LinearLayout>
 
@@ -275,7 +273,7 @@
                             android:layout_height="wrap_content"
                             android:padding="8dp"
                             app:srcCompat="@android:drawable/ic_menu_add"
-                            android:background="@drawable/invisible_border"/>
+                            />
                     </LinearLayout>
 
                 </LinearLayout>
