--- a/app/src/main/res/layout/activity_domain_blocker.xml
+++ b/app/src/main/res/layout/activity_domain_blocker.xml
@@ -165,7 +165,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:padding="8dp"
         android:background="@drawable/light_gray_border"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -174,8 +173,9 @@
         app:layout_constraintTop_toTopOf="@+id/guideline2">
 
         <com.jjoe64.graphview.GraphView
+            android:layout_margin="8dp"
             android:id="@+id/graph"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent" />
 
     </LinearLayout>
