--- a/app/src/main/res/layout/activity_vpn.xml
+++ b/app/src/main/res/layout/activity_vpn.xml
@@ -160,14 +160,14 @@
                     android:orientation="horizontal"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    android:baselineAligned="false">
+                    android:baselineAligned="false"
+                    android:background="@drawable/light_gray_border">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_weight=".5"
-                        android:background="@drawable/light_gray_border">
+                        android:layout_weight=".5">
 
                         <TextView
                             android:id="@+id/upstream_title"
@@ -187,12 +187,16 @@
 
                     </LinearLayout>
 
+                    <View
+                        android:layout_height="match_parent"
+                        android:layout_width="1dp"
+                        android:background="@color/notAsLightGray" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:layout_weight=".5"
-                        android:background="@drawable/light_gray_border">
+                        android:layout_weight=".5">
 
                         <TextView
                             android:id="@+id/downstream_title"
