--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -60,7 +60,7 @@
                 android:text="@string/domain_blocker_info" />
 
             <TextView
-                android:id="@+id/total_queries_number"
+                android:id="@+id/total_queries"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight=".40"
