--- a/app/src/main/res/layout/list_item_query_log.xml
+++ b/app/src/main/res/layout/list_item_query_log.xml
@@ -49,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:text="@string/status_title"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
