--- a/app/src/main/res/layout/activity_domain_blocker.xml
+++ b/app/src/main/res/layout/activity_domain_blocker.xml
@@ -175,7 +175,7 @@
         <com.jjoe64.graphview.GraphView
             android:layout_margin="8dp"
             android:id="@+id/graph"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
     </LinearLayout>
