--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -39,15 +39,15 @@
             android:id="@+id/domain_blocker_info_box"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:clickable="true"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="4dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="4dp"
             android:background="@drawable/light_gray_border"
+            android:clickable="true"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/guideline3"
-            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -63,11 +63,11 @@
                 android:id="@+id/total_queries"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight=".40"
-                android:gravity="center"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
+                android:layout_weight=".40"
                 android:background="@drawable/light_gray_top_bottom"
+                android:gravity="center"
                 android:text="@string/no_data" />
 
             <TextView
@@ -79,50 +79,50 @@
                 android:text="@string/no_data" />
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/dns_info_box"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="4dp"
-            android:layout_weight="1"
-            android:background="@drawable/light_gray_border"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/guideline3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toTopOf="parent">
+<!--        <LinearLayout-->
+<!--            android:id="@+id/dns_info_box"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:layout_marginStart="4dp"-->
+<!--            android:layout_marginEnd="8dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:layout_marginBottom="4dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:background="@drawable/light_gray_border"-->
+<!--            android:orientation="vertical"-->
+<!--            app:layout_constraintBottom_toTopOf="@+id/guideline3"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="@+id/guideline"-->
+<!--            app:layout_constraintTop_toTopOf="parent">-->
 
-            <TextView
-                android:id="@+id/dns_info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight=".2"
-                android:gravity="center"
-                android:text="@string/dns_info" />
+<!--            <TextView-->
+<!--                android:id="@+id/dns_info"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight=".2"-->
+<!--                android:gravity="center"-->
+<!--                android:text="@string/dns_info" />-->
 
 
-            <TextView
-                android:id="@+id/dns_status"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight=".4"
-                android:gravity="center"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:background="@drawable/light_gray_top_bottom"
-                android:text="@string/status_offline" />
+<!--            <TextView-->
+<!--                android:id="@+id/dns_status"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight=".4"-->
+<!--                android:gravity="center"-->
+<!--                android:layout_marginStart="8dp"-->
+<!--                android:layout_marginEnd="8dp"-->
+<!--                android:background="@drawable/light_gray_top_bottom"-->
+<!--                android:text="@string/status_offline" />-->
 
-            <TextView
-                android:id="@+id/dns_ip_address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight=".4"
-                android:gravity="center"
-                android:text="@string/dns_ip_address" />
-        </LinearLayout>
+<!--            <TextView-->
+<!--                android:id="@+id/dns_ip_address"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight=".4"-->
+<!--                android:gravity="center"-->
+<!--                android:text="@string/dns_ip_address" />-->
+<!--        </LinearLayout>-->
 
 
         <LinearLayout
@@ -402,122 +402,122 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/danger_zone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/red_border"
-                android:orientation="vertical">
+<!--            <LinearLayout-->
+<!--                android:id="@+id/danger_zone"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginLeft="8dp"-->
+<!--                android:layout_marginRight="8dp"-->
+<!--                android:layout_marginBottom="8dp"-->
+<!--                android:background="@drawable/red_border"-->
+<!--                android:orientation="vertical">-->
 
-                <TextView
-                    android:id="@+id/danger_zone_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/red_border"
-                    android:padding="8dp"
-                    android:text="@string/danger_zone" />
+<!--                <TextView-->
+<!--                    android:id="@+id/danger_zone_title"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:background="@drawable/red_border"-->
+<!--                    android:padding="8dp"-->
+<!--                    android:text="@string/danger_zone" />-->
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginRight="8dp"
-                    android:background="@drawable/red_border"
-                    android:orientation="vertical">
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginLeft="8dp"-->
+<!--                    android:layout_marginTop="8dp"-->
+<!--                    android:layout_marginRight="8dp"-->
+<!--                    android:background="@drawable/red_border"-->
+<!--                    android:orientation="vertical">-->
 
-                    <TextView
-                        android:id="@+id/temporarily_disable"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="8dp"
-                        android:text="@string/temporarily_disable" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/temporarily_disable"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:padding="8dp"-->
+<!--                        android:text="@string/temporarily_disable" />-->
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/linearLayout6"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+<!--                    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--                        android:id="@+id/linearLayout6"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content">-->
 
-                        <Button
-                            android:id="@+id/disable_30_seconds"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginTop="8dp"
-                            android:text="@string/disable_30_seconds"
-                            app:layout_constraintEnd_toStartOf="@+id/guideline12"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+<!--                        <Button-->
+<!--                            android:id="@+id/disable_30_seconds"-->
+<!--                            android:layout_width="0dp"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_marginStart="8dp"-->
+<!--                            android:layout_marginTop="8dp"-->
+<!--                            android:text="@string/disable_30_seconds"-->
+<!--                            app:layout_constraintEnd_toStartOf="@+id/guideline12"-->
+<!--                            app:layout_constraintStart_toStartOf="parent"-->
+<!--                            app:layout_constraintTop_toTopOf="parent" />-->
 
-                        <Button
-                            android:id="@+id/disable_10_minutes"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginBottom="8dp"
-                            android:text="@string/disable_10_minutes"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toStartOf="@+id/guideline12"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/disable_30_seconds" />
+<!--                        <Button-->
+<!--                            android:id="@+id/disable_10_minutes"-->
+<!--                            android:layout_width="0dp"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_marginStart="8dp"-->
+<!--                            android:layout_marginBottom="8dp"-->
+<!--                            android:text="@string/disable_10_minutes"-->
+<!--                            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                            app:layout_constraintEnd_toStartOf="@+id/guideline12"-->
+<!--                            app:layout_constraintStart_toStartOf="parent"-->
+<!--                            app:layout_constraintTop_toBottomOf="@+id/disable_30_seconds" />-->
 
-                        <androidx.constraintlayout.widget.Guideline
-                            android:id="@+id/guideline12"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            app:layout_constraintGuide_percent="0.5" />
+<!--                        <androidx.constraintlayout.widget.Guideline-->
+<!--                            android:id="@+id/guideline12"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:orientation="vertical"-->
+<!--                            app:layout_constraintGuide_percent="0.5" />-->
 
-                        <Button
-                            android:id="@+id/disable_5_minutes"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginTop="8dp"
-                            android:text="@string/disable_5_minutes"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="@+id/guideline12"
-                            app:layout_constraintTop_toTopOf="parent" />
+<!--                        <Button-->
+<!--                            android:id="@+id/disable_5_minutes"-->
+<!--                            android:layout_width="0dp"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_marginEnd="8dp"-->
+<!--                            android:layout_marginTop="8dp"-->
+<!--                            android:text="@string/disable_5_minutes"-->
+<!--                            app:layout_constraintEnd_toEndOf="parent"-->
+<!--                            app:layout_constraintStart_toStartOf="@+id/guideline12"-->
+<!--                            app:layout_constraintTop_toTopOf="parent" />-->
 
-                        <Button
-                            android:id="@+id/disable_1_hour"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginBottom="8dp"
-                            android:text="@string/disable_1_hour"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="@+id/guideline12"
-                            app:layout_constraintTop_toBottomOf="@+id/disable_5_minutes" />
+<!--                        <Button-->
+<!--                            android:id="@+id/disable_1_hour"-->
+<!--                            android:layout_width="0dp"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_marginEnd="8dp"-->
+<!--                            android:layout_marginBottom="8dp"-->
+<!--                            android:text="@string/disable_1_hour"-->
+<!--                            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                            app:layout_constraintEnd_toEndOf="parent"-->
+<!--                            app:layout_constraintStart_toStartOf="@+id/guideline12"-->
+<!--                            app:layout_constraintTop_toBottomOf="@+id/disable_5_minutes" />-->
 
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--                    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
-                </LinearLayout>
+<!--                </LinearLayout>-->
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:background="@drawable/red_border"
-                    android:orientation="vertical">
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_margin="8dp"-->
+<!--                    android:background="@drawable/red_border"-->
+<!--                    android:orientation="vertical">-->
 
-                    <Switch
-                        android:id="@+id/disable_entire_application"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginEnd="8dp"
-                        android:padding="8dp"
-                        android:text="@string/disable_entire_application" />
+<!--                    <Switch-->
+<!--                        android:id="@+id/disable_entire_application"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginTop="8dp"-->
+<!--                        android:layout_marginBottom="8dp"-->
+<!--                        android:layout_marginEnd="8dp"-->
+<!--                        android:padding="8dp"-->
+<!--                        android:text="@string/disable_entire_application" />-->
 
-                </LinearLayout>
+<!--                </LinearLayout>-->
 
-            </LinearLayout>
+<!--            </LinearLayout>-->
 
         </LinearLayout>
 
