--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="transparent">#50000000</color>
     <color name="transparentGreen">#5045A00E</color>
     <color name="transparentClear">#00000000</color>
+    <color name="ic_launcher_background">#b8b8b8</color>
 </resources>
