--- a/app/src/main/res/layout/activity_blocklists.xml
+++ b/app/src/main/res/layout/activity_blocklists.xml
@@ -42,6 +42,9 @@
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:padding="8dp"
+            android:hint="@string/blocklist_example"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/blocklist_urls_add"
             app:layout_constraintStart_toStartOf="parent"
